hamburguer menu creaed. First approach using floating and relative positioning of elements. Problem w/ fixing the header-nav and overlapping w/ other content

--- a/front-dev/w3-assignment/css-styles/style.css
+++ b/front-dev/w3-assignment/css-styles/style.css
@@ -34,7 +34,7 @@ li:hover{
 }
 
   
-}
+
 
 body{
     background-color:whitesmoke;
@@ -46,7 +46,8 @@ header{
     margin-right: -10px;
     top: 0%;
     float: left;
-    position: fixed 
+    position: relative;
+    
     /* TODO: find out a better solution for this and avoid overlapping */
 
 }
@@ -59,6 +60,7 @@ header{
     border-style: solid;
     width: 100%;    
     top: 0%;
+    position: fixed;
 }
 
 .container{
@@ -66,6 +68,9 @@ header{
     top: 0%;
     position: relative; /* :D the pivot point where every element included will have an absolute or relative position*/
     z-index: 1;
+    display: grid; 
+    grid-template-columns: auto auto auto;
+    
 }
 
 .navbar-header{
@@ -155,17 +160,29 @@ wit the class header list will receive this property values */
   background: #ffffff;
 }
 
+.navbar-toggle input:checked ~ ul{
+    display: inline;
+    list-style-type: none;
+    background-color: gray;
+    
+    background-blend-mode: luminosity;
+    transform: translate(-200px,0);
 
-.navbar-toggle input:checked ~ span:nth-last-child(2)
+}
+
+
+
+
+.navbar-toggle input:checked ~ span:nth-last-child(3)
 {
   opacity: 0;
   transform: rotate(0deg) scale(0.2, 0.2);
 }
 
 
-.navbar-toggle input:checked ~ span:nth-last-child(1)
+.navbar-toggle input:checked ~ span:nth-last-child(2)
 {
-  transform: rotate(-45deg) translate(0, -2px);
+  transform: rotate(-45deg) 
   /* two-dimensional transformation is applied to an element through the 'transform' property.
   Here css transforms the first last (visually the third one) span element and apply a rotation of -45 degrees and 
   translate it (move it) -2px. looking the first part of a cross
@@ -173,16 +190,27 @@ wit the class header list will receive this property values */
   */
 }
 
-.navbar-toggle input:checked ~ span:nth-last-child(3){
-    transform: rotate(45deg) translate(0, -2px);
+.navbar-toggle input:checked ~ span:nth-last-child(4){
+    transform: rotate(45deg) translate(0px, -3px);
     /* here we do smthg similar but on the other direction to build the second part of the cross */
 
 }
-
-.navbar-toggle input:checked  ~ * .header-list {
-    display: contents;
-    visibility: visible;
+.hamburguer-menu{
+    position: absolute;
+    width: 300px;
+    margin: -100px 0 0 -50px;
+    padding: 50px;
+    padding-top: 125px;
+    transform-origin: 0% 0%;
+    transform: translate(200%, 0);
+    
 }
+
+.navbar-toggle input:checked ~ ul{
+    transform: translate(-150%, 0);
+}
+
+
 
 /*for each section, a different color is defined. Here combining selectors are used. 
 In this case, descendant selector is handy*/
